@@ -4,20 +4,28 @@ use warnings;
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
-  NAME           => 'DBIx::Simple::Class',
-  AUTHOR         => q{Красимир Беров <berov@cpan.org>},
-  VERSION_FROM   => 'lib/DBIx/Simple/Class.pm',
-  ABSTRACT_FROM  => 'lib/DBIx/Simple/Class.pod',
-  MIN_PERL_VERSION=> '5.10.1',
-  LICENSE        => 'artistic_2',
-  PL_FILES       => {},
-  BUILD_REQUIRES => {'DBD::SQLite' => '1.29',
-  'File::Basename' =>0,
-  'Cwd' =>0,
+  NAME             => 'DBIx::Simple::Class',
+  AUTHOR           => q{Красимир Беров <berov@cpan.org>},
+  VERSION_FROM     => 'lib/DBIx/Simple/Class.pm',
+  ABSTRACT_FROM    => 'lib/DBIx/Simple/Class.pod',
+  MIN_PERL_VERSION => '5.10.1',
+  LICENSE          => 'artistic_2',
+  PL_FILES         => {},
+  BUILD_REQUIRES   => {
+    'DBD::SQLite'    => '1.29',
+    'File::Basename' => 0,
+    'Cwd'            => 0,
   },
-  PREREQ_PM      => {
-    'Test::More'   => 0,
-    'DBIx::Simple' => 1.33,
+  PREREQ_PM => {
+    'Test::More'                => 0,
+    'DBIx::Simple'              => 1.33,
+    'Params::Check'             => 0,
+    'Carp'                      => 0,
+    'Data::Dumper'              => 0,
+    'Module::Load::Conditional' => 0,
+    'File::Path'                => 2.07,
+    'File::Spec'                => 0,
+    'IO::File'                  => 0,
   },
   dist  => {COMPRESS => 'gzip -9f', SUFFIX => 'gz',},
   clean => {FILES    => 'DBIx-Simple-Class-*'},
