@@ -3,6 +3,7 @@ Revision history for DBIx::Simple::Class
         Created DBIx::Simple::Class::Schema.
         Implemented load_schema().
         Implemented dump_schema_at().
+        Added all dependencies to Makefile.PL
 
 0.70    2012-08-26 00:20:50 EEST
         - Increased version because of PAUSE
